refactoring-analysis (#1)
* Refactoring analysis in progress

* Work in progress

* Fixing tests in progress

* JUnit test for MediaAnalyzer

* Finished MediaAnalyzer implementation

* Info command adjustment

* Added TODO

* Console tweaks

---------

Co-authored-by: Jakub Gondar <jgondar@ohpen.com>